--- a/src/main/resources/templates/product/productInquiry.html
+++ b/src/main/resources/templates/product/productInquiry.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <link rel="stylesheet" href="../static/css/product/productInquiry.css" />
 <script src="../static/js/product/productInquiry.js" type="text/javascript"></script>
 <body>
-  <div class="container">
-    <ul class="nav nav-pills nav-fill">
-      <li class="nav-item">
-        <a class="nav-link active" href="/">홈</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/order">주문창</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">주문내역</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">결제내역</a>
-      </li>
-    </ul>
-  </div>
+<th:block th:replace="config :: configFragment"></th:block>
+<th:block th:replace="header :: headerFragment"></th:block>
 
   <div class="container mt-2">
     <label>메뉴</label>
